<resources>
    <string name="app_name">MapsApp</string>
    <string name="api_key">AIzaSyD4gzPZ8aIa6wzC3Da58JDFIOr4M_lIv6g</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="zone">Selected Zone</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="configuration">Ajouter une zone</string>
    <string name="latitude">Latitude</string>
    <string name="title">Creation de Rayon</string>
    <string name="longitude">longitude</string>
    <string name="rayon">Rayon</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
</resources>
